cmake_minimum_required(VERSION 3.16)

project(themeparser VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.5 REQUIRED COMPONENTS Gui)

qt_standard_project_setup(REQUIRES 6.5)

set(VENUSOS_THEMES_DIR_CMAKE "${PROJECT_SOURCE_DIR}/../../themes/")
cmake_path(NATIVE_PATH VENUSOS_THEMES_DIR_CMAKE VENUSOS_THEMES_DIR_NATIVE)
string(REPLACE "\\" "\\\\" VENUSOS_THEMES_DIR_NATIVE "${VENUSOS_THEMES_DIR_NATIVE}")
set(VENUSOS_THEMEOBJECTSH_CMAKE "${PROJECT_SOURCE_DIR}/../../src/themeobjects.h")
cmake_path(NATIVE_PATH VENUSOS_THEMEOBJECTSH_CMAKE VENUSOS_THEMEOBJECTSH_NATIVE)
string(REPLACE "\\" "\\\\" VENUSOS_THEMEOBJECTSH_NATIVE "${VENUSOS_THEMEOBJECTSH_NATIVE}")
add_definitions(-DVENUSOS_THEMES_DIR=\"${VENUSOS_THEMES_DIR_NATIVE}\" -DVENUSOS_THEMEOBJECTS_H=\"${VENUSOS_THEMEOBJECTSH_NATIVE}\")

set_property(SOURCE themeparser.cpp PROPERTY SKIP_AUTOMOC ON)
qt_add_executable(${PROJECT_NAME}
    main.cpp
    themeparser.h themeparser.cpp
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(${PROJECT_NAME} PROPERTIES
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(${PROJECT_NAME}
    PRIVATE Qt6::Gui
)

include(GNUInstallDirs)
install(TARGETS ${PROJECT_NAME}
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

